--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Scraper de licitaciones de Panamá Compra",
   "main": "licitacionesPC.cjs",
   "scripts": {
-    "start": "node licitacionesPC.cjs"
+    "start": "node licitacionesPC.cjs",
+    "postinstall": "puppeteer browsers install chrome"
   },
   "dependencies": {
     "puppeteer": "^24.16.0"
