--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Scraper de licitaciones de Panamá Compra",
   "main": "licitacionesPC.cjs",
   "scripts": {
-    "start": "node licitacionesPC.cjs",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "start": "node licitacionesPC.cjs"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "puppeteer": "^24.16.0"
   }
 }
